feat: add swagger to schools
